--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,7 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-redirect-from
+  - jekyll-seo-tag
 
 # http://jekyllrb.com/docs/pagination/
 paginate: 5
