--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,8 @@ navigation:
 # disqus: justgoodthemes
 
 # Colors
-accent_color: '#2d72d9'
+accent_color: '#003087'
+#accent_color: '#2d72d9'
 
 # Site footer
 footer:
@@ -64,7 +65,7 @@ plugins:
   - jekyll-seo-tag
 
 # http://jekyllrb.com/docs/pagination/
-paginate: 5
+paginate: 10
 paginate_path: '/page:num/'
 
 
