--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-redirect-from
   - jekyll-seo-tag
+  - jekyll-toc
 
 # http://jekyllrb.com/docs/pagination/
 paginate: 10
@@ -79,3 +80,11 @@ markdown: kramdown
 sass:
   sass_dir: _sass
   style: compressed
+
+# TOC Settings
+toc:
+ min_level: 1
+ max_level: 3
+ list_class: toc
+ list_class: toc__list
+ sublist_class: toc__sublist
